--- a/_slides/03-4638jay.md
+++ b/_slides/03-4638jay.md
@@ -3,7 +3,7 @@ layout: slide
 title: "Welcome to our slide deck!"
 ---
 
-This is Jay's Caption
+This is Jay's Caption Captain!
 
 ![poptocat](https://octodex.github.com/images/poptocat.png)
 {: .center}
