--- a/_slides/03-4638jay.md
+++ b/_slides/03-4638jay.md
@@ -4,6 +4,7 @@ title: "Welcome to our slide deck!"
 ---
 
 This is Jay's Caption Captain!
+We have added this text to line seven.
 
 ![poptocat](https://octodex.github.com/images/poptocat.png)
 {: .center}
